--- a/Telemetry.Web/Telemetry.Web.csproj
+++ b/Telemetry.Web/Telemetry.Web.csproj
@@ -6,6 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Telemetry.Database\Telemetry.Database.csproj" />
   </ItemGroup>
 
 </Project>
