--- a/Telemetry.Web/Telemetry.Web.csproj
+++ b/Telemetry.Web/Telemetry.Web.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Telemetry.Database\Telemetry.Database.csproj" />
+  </ItemGroup>
+
 </Project>
