--- a/Telemetry.Receivers/Telemetry.Receivers.csproj
+++ b/Telemetry.Receivers/Telemetry.Receivers.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Telemetry.Base\Telemetry.Base.csproj" />
+  </ItemGroup>
+
 </Project>
