refact link Telemetry.Receivers

--- a/Telemetry.Tests/Telemetry.Tests.csproj
+++ b/Telemetry.Tests/Telemetry.Tests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Telemetry.Receivers\Telemetry.Receivers.csproj" />
     <ProjectReference Include="..\Telemetry.Web\Telemetry.Web.csproj" />
   </ItemGroup>
 
