Рефакторинг генерации токена Close #24

--- a/Telemetry.Web/appsettings.json
+++ b/Telemetry.Web/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "SecretKey": "mysuperSecret@key!2234",
+  "JwtIssuerOptions": {
+    "Issuer": "SMTU-Dev",
+    "Audience": "SMTU-Dev-SensorServer"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
