--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (web)",
+            "name": "Launch Web",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
+            "preLaunchTask": "build-web",
             "program": "${workspaceFolder}/Telemetry.Web/bin/Debug/netcoreapp2.2/Telemetry.Web.dll",
             "args": [],
             "cwd": "${workspaceFolder}/Telemetry.Web",
@@ -34,6 +34,18 @@
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
             }
+        },
+        {
+            "name": "Launch Server",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build-server",
+            "program": "${workspaceFolder}/Telemetry.Server/bin/Debug/netcoreapp2.2/Telemetry.Server.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Telemetry.Server",
+            "console": "integratedTerminal",
+            "stopAtEntry": false,
+            "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "name": ".NET Core Attach",
