--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,22 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "build-web",
             "command": "dotnet",
             "type": "process",
             "args": [
                 "build",
                 "${workspaceFolder}/Telemetry.Web/Telemetry.Web.csproj"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "build-server",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "build",
+                "${workspaceFolder}/Telemetry.Server/Telemetry.Server.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
